--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong>
 			<h3>Drone Shooter</h3>
 			<p>Un simple test pour réaliser un FPS sur Unity</p>
+			<strong><a id="dwn" href="Drone_Shooter.zip" download> Télécharger le jeu </a></strong>
         </section>
         <section>
             <h2><a name="Thr">Three.js</a></h2>
