--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 			<strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong>
 			<h3>Drone Shooter</h3>
 			<p>Un simple test pour réaliser un FPS sur Unity</p>
-			<strong><a id="dwn" href="Drone_Shooter.zip" download> Télécharger le jeu </a></strong>
+			<img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive">
+			<img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive">
         </section>
         <section>
             <h2><a name="Thr">Three.js</a></h2>
