--- a/index.html
+++ b/index.html
@@ -16,25 +16,36 @@
         </ul>
         <section>
             <h2><a name="Uni">Unity</a></h2>
-            <h3>Asteroïds</h3>
-			<p>Un remake du célèbre jeu Asteroïds de 1979.</p>
-			<p>
-                 <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</p>
-			<strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong>
-			<h3>Drone Shooter</h3>
-			<p>Un simple test pour réaliser un FPS sur Unity</p>
-			<img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%">
-			<img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%">
+            <section>
+                <h2>Asteroïds</h2>
+                <p>Un remake du célèbre jeu Asteroïds de 1979.</p>
+                <p>
+                     <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </p>
+                <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
+            </section>
+            <section>
+                <h2>Drone Shooter</h2>
+                <p>Un jeu pour tester les fonctonalités 3D avec un FPS sur Unity.</p>
+                <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+                <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+            </section>
         </section>
         <section>
-            <h2><a name="Thr">Three.js</a></h2>
-			<h3>Space Invaders</h3>
-			<p>Un remake de Space Invaders fait avec Three.js</p>
+            <h2><a name="Thr">Three.js</a></h2></br>
+			<h2>Space Invaders</h2>
+			<p>Un remake de Space Invaders fait avec Three.js, réaliser dans le cadre d'un cours durant ma 1ère année de master.</p>
+            <p><img src="Images/SIGame.JPG" alt="map" class="responsive" width="50%" height="50%"></p>
+            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Jouer au jeu </a></p>
+            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Le Rapport </a></p>
         </section>
 		        <section>
-            <h2><a name="Gam">GameMaker</a></h2>
-			<h3>Shinning Champions</h3>
+            <h2><a name="Gam">GameMaker</a></h2></br>
+			<h2>Shinning Champions</h2>
             <p>Un petit RPG action.</p> 
+            <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+            <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+            <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
+
