--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <section>
                 <h2>Asteroïds</h2>
                 <p>Un remake du célèbre jeu Asteroïds de 1979.</p>
+		    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
                 <p>
                      <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
