--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <section>
                 <h2>Asteroïds</h2>
                 <p>Un remake du célèbre jeu Asteroïds de 1979.</p>
-		    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
                 <p>
                      <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
+		<p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
                 <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
             </section>
             <section>
@@ -46,6 +46,7 @@
             <p>Un petit RPG action.</p> 
             <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne</p>
             <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
