--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
             <section>
                 <h2>Drone Shooter</h2>
-                <p>Un jeu pour tester les fonctonalités 3D avec un FPS sur Unity.</p>
+                <p>Un prototype pour tester les fonctonalités 3D de Unity en faisant un FPS.</p>
                 <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
                 <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             </section>
@@ -43,7 +43,7 @@
 		        <section>
             <h2><a name="Gam">GameMaker</a></h2></br>
 			<h2>Shinning Champions</h2>
-            <p>Un petit RPG action.</p> 
+            <p>Un petit prototype d'action-RPG.</p> 
             <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
 	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne</p>
