--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Un petit prototype d'action-RPG.</p> 
             <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne</p>
+	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne. Pour l'instant vous pouvez uniquement combattre un individus désarmé qui respawnera à chaque fois que vous quitterez l'arêne.</p>
             <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
