--- a/index.html
+++ b/index.html
@@ -17,19 +17,33 @@
         <section>
             <h2><a name="Uni">Unity</a></h2>
             <section>
-                <h2>Asteroïds</h2>
-                <p>Un remake du célèbre jeu Asteroïds de 1979.</p>
-                <p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <h2>Stage Safran Engineering Services</h2>
+                <p>Il s'agit du stage de fin d'étude que j'ai réalisé durant mon master. Le but de ce stage était de réalisé des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
+				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur</p>
+				<p>
+                     <iframe width="700" height="394" src="https://www.youtube.com/watch?v=kEwnJC85aRU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
-		<p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
-                <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
+				<p>Un autre des projets a été de créer un​ package permettant d’utiliser la réalité virtuelle avec plusieurs utilisateurs en se connectant via le réseau.</p>
+				<p>
+                     <iframe width="700" height="394" src="https://www.youtube.com/watch?v=I636okERUKg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </p>
+                <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+                <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             </section>
-            <section>
+			<section>
                 <h2>Drone Shooter</h2>
                 <p>Un prototype pour tester les fonctonalités 3D de Unity en faisant un FPS.</p>
                 <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
                 <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+            </section>
+            <section>
+                <h2>Asteroïds</h2>
+                <p>Un remake du célèbre jeu Asteroïds de 1979 fait sur Unity.</p>
+                <p>
+                     <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </p>
+		        <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
+                <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
             </section>
         </section>
         <section>
@@ -43,11 +57,10 @@
 		        <section>
             <h2><a name="Gam">GameMaker</a></h2></br>
 			<h2>Shinning Champions</h2>
-            <p>Un petit prototype d'action-RPG.</p> 
+            <p>Un petit prototype d'action-RPG. Tous les assets ont été réalisés par moi-même. Jeu très simple où le joueur peut se déplacer/attaquer, ainsi que rammasser de l'équipement. Pour l'instant vous pouvez uniquement combattre un individu désarmé dans une arêne qui respawnera à chaque fois que vous quittez le lieu.</p> 
             <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne. Pour l'instant vous pouvez uniquement combattre un individu désarmé qui respawnera à chaque fois que vous quitterez l'arêne.</p>
+	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne.</p>
             <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
-
