--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <p>Il s'agit du stage de fin d'étude que j'ai réalisé durant mon master. Le but de ce stage était de réalisé des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
 				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur</p>
 				<p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/watch?v=kEwnJC85aRU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     <iframe width="700" height="394" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
 				<p>Un autre des projets a été de créer un​ package permettant d’utiliser la réalité virtuelle avec plusieurs utilisateurs en se connectant via le réseau.</p>
 				<p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/watch?v=I636okERUKg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     <iframe width="700" height="394" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
                 <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
                 <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
