--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<h1>Hedaox's Games</h1>
         <ul id="nav">
             <li><a href="#Uni">Unity</a></li>
+			<li><a href="#Min">Minecraft</a></li>
             <li><a href="#Thr">Three.js</a></li>
             <li><a href="#Gam">GameMaker</a></li>
         </ul>
@@ -19,18 +20,16 @@
             <section>
                 <h2>Stage Safran Engineering Services</h2>
                 <p>Il s'agit du stage de fin d'étude que j'ai réalisé durant mon master. Le but de ce stage était de réalisé des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
-				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur</p>
+				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur.</p>
 				<p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/watch?v=kEwnJC85aRU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     <iframe width="700" height="394" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
 				<p>Un autre des projets a été de créer un​ package permettant d’utiliser la réalité virtuelle avec plusieurs utilisateurs en se connectant via le réseau.</p>
 				<p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/watch?v=I636okERUKg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     <iframe width="700" height="394" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </p>
 				<p>Pour plus d'infos sur ce stage voici le rapport de stage : </p>
 				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Rapport </a></strong></p>
-                <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-                <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             </section>
 			<section>
                 <h2>Drone Shooter</h2>
@@ -48,6 +47,10 @@
                 <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
             </section>
         </section>
+		<section>
+			<h2><a name="Min">Minecraft</a></h2>
+			<p></p>
+		</section>
         <section>
             <h2><a name="Thr">Three.js</a></h2></br>
 			<h2>Space Invaders</h2>
