--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <h2>Stage Safran Engineering Services</h2>
                 <p>Il s'agit du stage de fin d'étude que j'ai réalisé durant mon master. Le but de ce stage était de réalisé des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
 				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur.</p>
-				<p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                </p>
+				 <div class="videoDiv">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				 </div>
 				<p>Un autre des projets a été de créer un​ package permettant d’utiliser la réalité virtuelle avec plusieurs utilisateurs en se connectant via le réseau.</p>
-				<p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                </p>
-				<p>Pour plus d'infos sur ce stage voici le rapport de stage : </p>
+				<div class="videoDiv">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				</div>
+				<p>Pour plus d'infos sur ce stage téléchargez le rapport de stage : </p>
 				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Rapport </a></strong></p>
             </section>
 			<section>
@@ -40,16 +40,19 @@
             <section>
                 <h2>Asteroïds</h2>
                 <p>Un remake du célèbre jeu Asteroïds de 1979 fait sur Unity.</p>
-                <p>
-                     <iframe width="700" height="394" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                </p>
+				<div class="videoDiv">
+					 <iframe width="560" height="315" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				</div>
 		        <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
                 <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
             </section>
         </section>
 		<section>
-			<h2><a name="Min">Minecraft</a></h2>
-			<p></p>
+			<h2><a name="Min">Minecraft - Dragon Ball Ninjin</a></h2>
+			<p>DragonBall NINJIN est un projet de serveur Minecraft dans le thème de Dragon Ball. Il s'agit d'un serveur survival et semi-RP francophone, le but étant de se rapprocher le plus fidèlement possible de l'ambiance de l'univers de DragonBall décrit dans le manga et anime éponyme.</p>
+			<div class="videoDiv">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
 		</section>
         <section>
             <h2><a name="Thr">Three.js</a></h2></br>
@@ -69,4 +72,3 @@
             <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
-
