--- a/index.html
+++ b/index.html
@@ -49,9 +49,18 @@
         </section>
 		<section>
 			<h2><a name="Min">Minecraft - Dragon Ball Ninjin</a></h2>
-			<p>DragonBall NINJIN est un projet de serveur Minecraft dans le thème de Dragon Ball. Il s'agit d'un serveur survival et semi-RP francophone, le but étant de se rapprocher le plus fidèlement possible de l'ambiance de l'univers de DragonBall décrit dans le manga et anime éponyme.</p>
+			<p>DragonBall NINJIN est un projet de serveur Minecraft dans le thème de Dragon Ball basé sur le mod Dragon Block C de <a href="http://main.jingames.net/">JinGames</a>. Il s'agit d'un serveur survival et semi-RP francophone, le but étant de se rapprocher le plus fidèlement possible de l'ambiance de l'univers de DragonBall décrit dans le manga et anime éponyme.</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+			<p>Pour plus d'infos allez visiter le site web du serveur :</p>
+			<p><a id="dwn" href="https://hedaox.github.io/Ninjin/index.html"> Le site Web </a></p>
+			<p>Durant ce projet j'ai eu l'occasion de réaliser énormément de mods, dont deux que j'ai publié en open source :</p>
+			<p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
+			<p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
+			<p>Ici une vidéo d'un mod (ajout de la race de Cell pour le mod DBC) que j'ai réalisé pour une personne avec rémunération :</p>
+			<div class="videoDiv">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
 		</section>
         <section>
@@ -59,7 +68,7 @@
 			<h2>Space Invaders</h2>
 			<p>Un remake de Space Invaders fait avec Three.js, réaliser dans le cadre d'un cours durant ma 1ère année de master.</p>
             <p><img src="Images/SIGame.JPG" alt="map" class="responsive" width="50%" height="50%"></p>
-            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Jouer au jeu </a></p>
+            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Jouer au jeu en ligne </a></p>
             <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Le Rapport </a></p>
         </section>
 		        <section>
@@ -72,3 +81,4 @@
             <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
+
