--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<p>Durant ce projet j'ai eu l'occasion de réaliser énormément de mods, dont deux que j'ai publié en open source :</p>
 			<p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
 			<p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
-			<p>Ici une vidéo d'un mod (ajout de la race de Cell pour le mod DBC) que j'ai réalisé pour une personne avec rémunération :</p>
+			<p>Ici une vidéo d'un mod (ajout de la race de Cell pour le mod Dragon Block C) que j'ai réalisé pour une personne avec rémunération :</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
@@ -81,4 +81,3 @@
             <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
         </section>
 </html>
-
