--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<p>Durant ce projet j'ai eu l'occasion de réaliser énormément de mods, dont deux que j'ai publié en open source :</p>
 			<p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
 			<p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
-			<p>Ci dessous une vidéo d'un mod (ajout de la race de Cell pour le mod Dragon Block C) pour lequel j'ai perçu, en contre partie de sa réalisation, un paiment :</p>
+			<p>Ci dessous une vidéo d'un mod (ajout de la race de Cell pour le mod Dragon Block C) pour lequel j'ai perçu, en contre partie de sa réalisation, un paiement :</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
@@ -69,6 +69,7 @@
 			<p>Un remake de Space Invaders fait avec Three.js, réaliser dans le cadre d'un cours durant ma 1ère année de master.</p>
             <p><img src="Images/SIGame.JPG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Jouer au jeu en ligne </a></p>
+	    <p><a id="dwn" href="https://github.com/Hedaox/SpaceInvaders"> Le code source </a></p>
             <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Le Rapport </a></p>
         </section>
 		        <section>
