--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+	<img src="Images/englishButton.png" alt="map" class="responsive" width="50%" height="50%">
 	<h1>Hedaox's Games</h1>
         <ul id="nav">
             <li><a href="#Uni">Unity</a></li>
