--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-	<img src="Images/englishButton.png" alt="map" class="langButton" width="50%" height="50%">
+	<a href=indexFr.html><img src="Images/englishButton.png" alt="map" class="langButton" width="50%" height="50%"></a>
 	<h1>Hedaox's Games</h1>
         <ul id="nav">
             <li><a href="#Uni">Unity</a></li>
