--- a/indexFr.html
+++ b/indexFr.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-	<a href=index.html><img src="Images/frenchButton.png" alt="map" class="langButton" width="50%" height="50%"></a>
+	<a id="langButton" href=index.html><img src="Images/frenchButton.png" alt="map" width="50%" height="50%"></a>
 	<h1>Hedaox's Games</h1>
         <ul id="nav">
             <li><a href="#Uni">Unity</a></li>
