--- a/index.html
+++ b/index.html
@@ -19,47 +19,47 @@
         <section>
             <h2><a name="Uni">Unity</a></h2>
             <section>
-                <h2>Stage Safran Engineering Services</h2>
-                <p>Il s'agit du stage de fin d'étude que j'ai réalisé durant mon master. Le but de ce stage était de réalisé des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
-				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur.</p>
+                <h2>Internship at Safran Engineering Services</h2>
+                <p>This is the end-of-study internship that I did during my master's degree. The goal of this internship was to carry out "proofs of concepts" with Unity 3D in Virtual Reality.</p>
+				<p>In particular, I had the opportunity to work with Leap Motion, a technology capable of detecting and representing the user's hands in 3D.</p>
 				 <div class="videoDiv">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				 </div>
-				<p>Un autre des projets a été de créer un​ package permettant d’utiliser la réalité virtuelle avec plusieurs utilisateurs en se connectant via le réseau.</p>
+				<p>Another of the projects was to create a package allowing the use of virtual reality with multi-users features.</p>
 				<div class="videoDiv">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				</div>
-				<p>Pour plus d'infos sur ce stage téléchargez le rapport de stage : </p>
-				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Rapport </a></strong></p>
+				<p>For more information on this internship download the internship report(in French):</p>
+				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Report </a></strong></p>
             </section>
 			<section>
                 <h2>Drone Shooter</h2>
-                <p>Un prototype pour tester les fonctonalités 3D de Unity en faisant un FPS.</p>
+                <p>A prototype to test Unity's 3D functonalities by making an FPS.</p>
                 <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
                 <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             </section>
             <section>
                 <h2>Asteroïds</h2>
-                <p>Un remake du célèbre jeu Asteroïds de 1979 fait sur Unity.</p>
+                <p>A remake of the famous 1979 Asteroids game made on Unity.</p>
 				<div class="videoDiv">
 					 <iframe width="560" height="315" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				</div>
-		        <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer et ESPACE pour tirer.</p>
-                <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
+		        <p>To play use the directional arrows to move and SPACE to shoot.</p>
+                <p><strong><a id="dwn" href="Asteroïds.zip" download> Download the game </a></strong></p>
             </section>
         </section>
 		<section>
 			<h2><a name="Min">Minecraft - Dragon Ball Ninjin</a></h2>
-			<p>DragonBall NINJIN est un projet de serveur Minecraft dans le thème de Dragon Ball basé sur le mod Dragon Block C de <a href="http://main.jingames.net/">JinGames</a>. Il s'agit d'un serveur survival et semi-RP francophone, le but étant de se rapprocher le plus fidèlement possible de l'ambiance de l'univers de DragonBall décrit dans le manga et anime éponyme.</p>
+			<p>Dragon Ball NINJIN is a Minecraft server project in Dragon Ball theme based on <a href="http://main.jingames.net/">JinGames</a>'s Dragon Block C mod. It is a French-speaking survival and semi-RolePlay server, the goal being to get as close as possible to the atmosphere of the DragonBall universe described in the manga and anime.</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
-			<p>Pour plus d'infos allez visiter le site web du serveur :</p>
+			<p>For more info visit the server's website(in French):</p>
 			<p><a id="dwn" href="https://hedaox.github.io/Ninjin/index.html"> Le site Web </a></p>
-			<p>Durant ce projet j'ai eu l'occasion de réaliser énormément de mods, dont deux que j'ai publié en open source :</p>
+			<p>During this project I had the opportunity to make a lot of mods, including two that I published in open source:</p>
 			<p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
 			<p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
-			<p>Ci dessous une vidéo d'un mod (ajout de la race de Cell pour le mod Dragon Block C) pour lequel j'ai perçu, en contre partie de sa réalisation, un paiement :</p>
+			<p>Below is a video of a mod (addition of the Cell race for the Dragon Block C mod) for which I received, in return for its realization, a payment:</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
@@ -67,20 +67,20 @@
         <section>
             <h2><a name="Thr">Three.js</a></h2></br>
 			<h2>Space Invaders</h2>
-			<p>Un remake de Space Invaders fait avec Three.js, réaliser dans le cadre d'un cours durant ma 1ère année de master.</p>
+			<p>A remake of Space Invaders made with Three.js, realized as part of a course during my 1st year of master's degree.</p>
             <p><img src="Images/SIGame.JPG" alt="map" class="responsive" width="50%" height="50%"></p>
-            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Jouer au jeu en ligne </a></p>
-	    <p><a id="dwn" href="https://github.com/Hedaox/SpaceInvaders"> Le code source </a></p>
-            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Le Rapport </a></p>
+            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Play the game online</a></p>
+	    <p><a id="dwn" href="https://github.com/Hedaox/SpaceInvaders"> Source code </a></p>
+            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Report(in French) </a></p>
         </section>
 		        <section>
             <h2><a name="Gam">GameMaker</a></h2></br>
 			<h2>Shinning Champions</h2>
-            <p>Un petit prototype d'action-RPG. Tous les assets ont été réalisés par moi-même. Jeu très simple où le joueur peut se déplacer/attaquer, ainsi que rammasser de l'équipement. Pour l'instant vous pouvez uniquement combattre un individu désarmé dans une arêne qui respawnera à chaque fois que vous quittez le lieu.</p> 
+            <p>A small action-RPG prototype made in GameMaker. All the assets were made by myself. Very simple game where the player can move / attack, as well as collect equipment. For now you can only fight an unarmed individual in an arena that will respawn each time you leave the location.</p> 
             <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne.</p>
-            <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Télécharger le jeu </a></strong></p>
+	    <p>To play use the directional arrows to move, A / Z to Attack, W / X to grab an object, C / V to drop an object from your hand, B / N / H to drop equipment and SPACE to interact . To fight in the arena, take the entrance at the top left, then move left and press SPACE to enter the arena.</p>
+            <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Download the game </a></strong></p>
         </section>
 </html>
 
