--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2><a name="Uni">Unity</a></h2>
             <section>
                 <h2>Internship at Safran Engineering Services</h2>
-                <p>This is the end-of-study internship that I did during my master's degree. The goal of this internship was to carry out "proofs of concepts" with Unity 3D in Virtual Reality.</p>
+                <p>This is the end-of-study internship that I did during my master's degree. The goal of this internship was to carry out proofs of concepts with Unity 3D in Virtual Reality.</p>
 				<p>In particular, I had the opportunity to work with Leap Motion, a technology capable of detecting and representing the user's hands in 3D.</p>
 				 <div class="videoDiv">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
