--- a/indexFr.html
+++ b/indexFr.html
@@ -76,7 +76,7 @@
 		        <section>
             <h2><a name="Gam">GameMaker</a></h2></br>
 			<h2>Shinning Champions</h2>
-            <p>Un petit prototype d'action-RPG. Tous les assets ont été réalisés par moi-même. Jeu très simple où le joueur peut se déplacer/attaquer, ainsi que rammasser de l'équipement. Pour l'instant vous pouvez uniquement combattre un individu désarmé dans une arêne qui respawnera à chaque fois que vous quittez le lieu.</p> 
+            <p>Un petit prototype d'action-RPG sur GameMaker. Tous les assets ont été réalisés par moi-même. Jeu très simple où le joueur peut se déplacer/attaquer, ainsi que rammasser de l'équipement. Pour l'instant vous pouvez uniquement combattre un individu désarmé dans une arêne qui respawnera à chaque fois que vous quittez le lieu.</p> 
             <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
 	    <p>Pour jouer utilisez les flèches directionnelles pour vous déplacer, A/Z pour Attaquer, W/X pour attrapper un objet, C/V pour dropper un objet de la main, B/N/H pour dropper de l'équipement et ESPACE pour intéragir. Pour combattre dans l'arêne, prenez l'entrée en haut à gauche, puis déplacer vous à gauche et appuyez sur ESPACE pour entrer dans l'arêne.</p>
