--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 				<p>For more information on this internship download the internship report(in French):</p>
 				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Report </a></strong></p>
             </section>
+            <section>
+                <h2>Mesh Manipulation</h2>
+                <p>Some terrain mesh manipulation in Unity made to work in real time directly in the editor.</p>
+				<div class="videoDiv">
+					 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				</div>
+            </section>
 			<section>
                 <h2>Drone Shooter</h2>
                 <p>A prototype to test Unity's 3D functonalities by making an FPS.</p>
