--- a/indexFr.html
+++ b/indexFr.html
@@ -33,6 +33,14 @@
 				<p>Pour plus d'infos sur ce stage téléchargez le rapport de stage : </p>
 				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Rapport </a></strong></p>
             </section>
+		<section>
+                <h2>Manipulation d'un Mesh</h2>
+                <p>Manipulations de terrain dans Unity, programmées pour fonctionner en temps réel directement dans l'éditeur.</p>
+			<div class="videoDiv">
+				 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+			</div>
+		<br/>
+            	</section>
 			<section>
                 <h2>Drone Shooter</h2>
                 <p>Un prototype pour tester les fonctonalités 3D de Unity en faisant un FPS.</p>
